styles/header-footer.css
/* ... */
@media (min-width:768px) {}

@media (min-width:768px) {}

@media (min-width:768px) {}

@media (min-width:1024px) {}

@media (min-width:768px) {}

@media (min-width:1024px) {}

b {
    font-weight: 500
}

*,
:after,
:before {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x: ;
    --tw-pan-y: ;
    --tw-pinch-zoom: ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position: ;
    --tw-gradient-via-position: ;
    --tw-gradient-to-position: ;
    --tw-ordinal: ;
    --tw-slashed-zero: ;
    --tw-numeric-figure: ;
    --tw-numeric-spacing: ;
    --tw-numeric-fraction: ;
    --tw-ring-inset: ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgba(59, 130, 246, .5);
    --tw-ring-offset-shadow: 0 0#0000;
    --tw-ring-shadow: 0 0#0000;
    --tw-shadow: 0 0#0000;
    --tw-shadow-colored: 0 0#0000;
    --tw-blur: ;
    --tw-brightness: ;
    --tw-contrast: ;
    --tw-grayscale: ;
    --tw-hue-rotate: ;
    --tw-invert: ;
    --tw-saturate: ;
    --tw-sepia: ;
    --tw-drop-shadow: ;
    --tw-backdrop-blur: ;
    --tw-backdrop-brightness: ;
    --tw-backdrop-contrast: ;
    --tw-backdrop-grayscale: ;
    --tw-backdrop-hue-rotate: ;
    --tw-backdrop-invert: ;
    --tw-backdrop-opacity: ;
    --tw-backdrop-saturate: ;
    --tw-backdrop-sepia:
}

@media (min-width:415px) {}

@media (min-width:768px) {}

@media (min-width:1024px) {}

@media (min-width:1280px) {}

@media (min-width:415px) {}

@media (min-width:768px) {}

@media (min-width:1024px) {}

@media (min-width:1280px) {}

@media (min-width:415px) {}

@media (min-width:768px) {}

@media (min-width:1024px) {}

@media (min-width:1280px) {}

@media (min-width:415px) {}

@media (min-width:768px) {}

@media (min-width:1280px) {}

@media (min-width:415px) {}

@media (min-width:768px) {}

@media (min-width:1280px) {}

@media (min-width:768px) {}

@media (min-width:1024px) {}

@media (min-width:1280px) {}

@media (min-width:768px) {}

@media (min-width:1280px) {}

@media (min-width:768px) {}

@media (min-width:768px) {}

@media (min-width:1280px) {}

@media (min-width:1280px) {}

@media (min-width:1280px) {}

@media (min-width:1280px) {}

@media (min-width:1280px) {}

@media (min-width:1280px) {}

@media (min-width:1280px) {}

@media (min-width:768px) {}

@media (min-width:1024px) {}

.heading-xl {
    font-size: 2.25rem;
    line-height: 2.25rem;
    letter-spacing: -1px
}

@media (min-width:768px) {
    .heading-xl {
        font-size: 56px;
        line-height: 56px
    }
}

@media (min-width:1024px) {
    .heading-xl {
        font-size: 64px;
        line-height: 64px
    }
}

@media (min-width:768px) {}

@media (min-width:768px) {}

@media (min-width:768px) {}

@media (min-width:768px) {}

@media (min-width:1024px) {}

.paragraph-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
    letter-spacing: 0
}

@media (min-width:768px) {
    .paragraph-xl {
        font-size: 22px;
        line-height: 2rem
    }
}

@media (min-width:1024px) {
    .paragraph-xl {
        font-size: 1.5rem;
        line-height: 2rem
    }
}

.paragraph-lg {
    font-size: 1.125rem;
    line-height: 26px;
    letter-spacing: 0
}

@media (min-width:768px) {
    .paragraph-lg {
        font-size: 1.25rem;
        line-height: 1.75rem
    }
}

.paragraph-md {
    font-size: 1rem;
    line-height: 1.5rem;
    letter-spacing: 0
}

.paragraph-sm {
    font-size: .875rem;
    line-height: 1.25rem;
    letter-spacing: 0
}

.content-wrapper {
    margin-left: auto;
    margin-right: auto;
    max-width: 94.875rem
}

@media (max-width:1600px) {
    .content-wrapper {
        padding-left: 3.5rem;
        padding-right: 3.5rem
    }
}

@media not all and (min-width:768px) {
    .content-wrapper {
        padding-left: 1.25rem;
        padding-right: 1.25rem
    }
}

.pointer-events-auto {
    pointer-events: auto
}

.fixed {
    position: fixed;
}

.absolute {
    position: absolute;
}

.absolute {
    position: absolute
}

.relative {
    position: relative
}

.inset-0 {
    inset: 0
}

.left-\[9999px\] {
    left: 9999px
}

.top-0 {
    top: 0
}

.top-32 {
    top: 8rem
}

.z-0 {
    z-index: 0
}

.z-10 {
    z-index: 10
}

.z-50 {
    z-index: 50
}

.m-auto {
    margin: auto
}

.mx-2 {
    margin-left: .5rem;
    margin-right: .5rem
}

.mx-auto {
    margin-left: auto;
    margin-right: auto
}

.mb-10 {
    margin-bottom: 2.5rem
}

.mb-4 {
    margin-bottom: 1rem
}

.mb-6 {
    margin-bottom: 1.5rem
}

.ml-2 {
    margin-left: .5rem
}

.mr-1 {
    margin-right: .25rem
}

.mt-10 {
    margin-top: 2.5rem
}

.mt-14 {
    margin-top: 3.5rem
}

.mt-3 {
    margin-top: .75rem
}

.mt-6 {
    margin-top: 1.5rem
}

.flex {
    display: flex
}

.inline-flex {
    display: inline-flex
}

.grid {
    display: grid
}

.hidden {
    display: none
}

.h-0\.5 {
    height: .125rem
}

.h-4 {
    height: 1rem
}

.h-6 {
    height: 1.5rem
}

.h-8 {
    height: 2rem
}

.h-auto {
    height: auto
}

.h-full {
    height: 100%
}

.max-h-full {
    max-height: 100%
}

.w-20 {
    width: 5rem
}

.w-4 {
    width: 1rem
}

.w-40 {
    width: 10rem
}

.w-6 {
    width: 1.5rem
}

.w-full {
    width: 100%
}

.w-min {
    width: -moz-min-content;
    width: min-content
}

.min-w-96 {
    min-width: 24rem
}

.max-w-screen-lg {
    max-width: 1280px
}

.max-w-screen-xl {
    max-width: 1920px
}

.translate-x-96 {
    --tw-translate-x: 24rem
}

.rotate-0 {
    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
}

.rotate-0 {
    --tw-rotate: 0deg
}

.scale-\[59\%\] {
    --tw-scale-x: 59%;
    --tw-scale-y: 59%
}
/* ... */

